--- a/shop/templates/shop/item_list.html
+++ b/shop/templates/shop/item_list.html
@@ -1,5 +1,29 @@
 {% extends "shop/layout.html" %}
-
-{ % block content % }
-    {{ item_list }}
-{ % endblock % }
+{% load humanize %}
+{% block content%}
+        <div class="container">
+            <div class="row">
+                {% for item in item_list %}
+                    <div class="col-sm-3">
+                        <div class="card">
+                            {% if item.photo %}
+                            <img class="card-img-top" src="{{item.photo.url}}" alt="Card image cap">
+                            {% endif %}
+                            <div class="card-body">
+                                <h5 class="card-text">{{item.name}}</h5>
+                                <h5 class="card-text">{{item.amount|intcomma}}원</h5>
+                                {% if item.desc %}
+                                <p class="card-text">{{item.desc}}</p>
+                                {% endif %}
+                                <a href="" class="btn btn-primary btn-block">구매하기</a>
+                            </div>
+                            
+                                
+                            
+                        </div>
+                    </div>
+                 {% endfor %}
+            </div>    
+        </div>
+    
+{% endblock %}
