--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -7,7 +7,7 @@
             <h2>{{user}}'s Profile</h2>
             <h3>구매내역</h3>
 
-            ... {% endblock %}
         </div>
     </div>
 </div>
+{% endblock %}
