--- a/shopping/templates/layout.html
+++ b/shopping/templates/layout.html
@@ -27,7 +27,7 @@
                 </li>
                 {% if user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link"href="{% url 'root' %}">Profile</a>
+                        <a class="nav-link"href="{% url 'accounts:profile' %}">Profile</a>
                     </li>
                 {% else %} 
                 {% endif %}
