--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -1,4 +1,5 @@
 {% extends "accounts/layout.html"%}
+{% load humanize %}
 
 {% block content%}
 <div class="container">
@@ -6,7 +7,23 @@
         <div class="col-sm-12">
             <h2>{{user}}'s Profile</h2>
             <h3>구매내역</h3>
-
+             
+            <table class="table table-hover table-bordered">
+                <thead>
+                    <tr>
+                        <th>상품명</th>
+                        <th>결제가격</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for order in order_list %}
+                    <tr>
+                        <td>{{ order.name }}</td>
+                        <td class="text-right">{{ order.amount|intcomma }}</td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
         </div>
     </div>
 </div>
