최종 결제 구현

--- a/shopping/templates/layout.html
+++ b/shopping/templates/layout.html
@@ -8,6 +8,7 @@
     <title>쇼핑몰</title>
     <link rel="stylesheet" href="    //stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
     />
+    <script src="//code.jquery.com/jquery-2.2.4.min.js"></script>
 </head>
 
 <body>
