최종 결제 모듈 완성

--- a/shop/templates/shop/_iamport.html
+++ b/shop/templates/shop/_iamport.html
@@ -2,16 +2,12 @@
     $(function () {
         var params = {{json_fields}};
         IMP.init('{{ iamport_shop_id }}');
-        IMP.request_pay(params, function (response_data) {
-                if (!response_data.success) {
-                    alert(response_data.error_msg + "(" + response_data.error_code + ")");
-                    location.href = '{% url "shop:index" %}';
-                }
+        IMP.{{ imp_fn_name }}(params, function (response_data) {
                 var $form = $("#iamport-script").closest("form");
                 $.each(response_data, function (key, value) {
                     $form.find("input[name=" + key + "]").val(value);
                 });
                 $form.submit();
-            });
+        });
     });
 </script>
